--- a/src/styles/cmps/_header.scss
+++ b/src/styles/cmps/_header.scss
@@ -1,5 +1,4 @@
 .header-wrapper {
-    // height: 75px;
     padding-block: 17px;
     border-bottom: 1px solid $clr6;
     margin-bottom: 20px;
@@ -18,6 +17,10 @@
             color: $clr1;
             font-size: 30px;
             font-weight: bold;
+
+            img{
+                width: 50px;
+            }
         }
 
         .dashboard-nav {
@@ -29,7 +32,6 @@
             gap: 20px;
             color: $clr4;
 
-            // font-weight: 600;
             a.active {
                 position: relative;
                 font-weight: 600;
@@ -46,19 +48,6 @@
                     background-color: $clr3;
                 }
             }
-
-            // a:hover{
-            //     display: flex;
-            //     justify-content: center;
-            //     align-items: center;
-            //     background-color: $clr7;
-            //     font-weight: 600;
-            //     width: 120px;
-            //     height: 40px;
-            //     border-radius: 60px;
-            //     text-align: center;
-            // }
-
         }
 
         .user-menu {
@@ -75,7 +64,6 @@
                 height: 44px;
                 width: 140px;
                 align-content: center;
-                // font-family: 'AirMedium';
                 font-size: rem(15px);
                 font-weight: 600;
 
@@ -90,11 +78,8 @@
                 justify-content: space-around;
                 border: 1px solid $clr6;
                 position: relative;
-                // border-radius: 21px;
                 border-radius: 60px;
-                // padding: 4px 4px 4px 10px;
                 padding: 8px 0;
-                // gap: 13px;
                 position: relative;
                 box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.05);
                 height: 44px;
@@ -103,9 +88,6 @@
 
                 span {
                     font-size: rem(16px);
-                    // padding-inline-end:10px;
-                    // padding-inline-start:6px;
-                    // padding: 0px 10px 0px 10px;
                 }
 
                 .user-avater-con {
