--- a/src/styles/views/_become-host.scss
+++ b/src/styles/views/_become-host.scss
@@ -7,7 +7,6 @@
         flex-basis: 50%;
         display: flex;
         align-items: center;
-        // justify-content: center;
         background: rgb(255, 56, 92);
         background: linear-gradient(356deg, rgba(255, 56, 92, 1) 56%, rgba(255, 255, 255, 1) 100%);
         padding: 40px;
@@ -18,7 +17,6 @@
                 max-width: 450px;
                 color: $clr2;
                 font-weight: bold;
-                // margin-left: 40px;
             }
 
         }
@@ -28,8 +26,6 @@
         flex-basis: 50%;
         display: flex;
         flex-direction: column;
-        // justify-content: center;
-        // align-items: center;
         gap: 10px;
         padding: 10px;
         overflow-y: hidden;
@@ -87,7 +83,6 @@
                 border: 2px solid $clr6;
                 border-radius: 11px;
                 transition: 0.2s ease-in;
-                // transition: 0.2s ;
                 width: 350px;
                 font-size: rem(20px);
                 font-weight: 600;
@@ -116,7 +111,6 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                // font-family: AirBold;
 
             }
 
@@ -132,7 +126,6 @@
                 gap: 15px;
 
                 span {
-                    //    padding: 0px 10px 0px 10px;
                     font-size: rem(18px);
                     color: $clr3;
                     font-weight: 600;
@@ -150,7 +143,6 @@
                     background-color: $clr2;
                     cursor: pointer;
 
-                    //    padding: 2px 2px 2px 2px;
                     &:hover {
                         border: 1px solid $clr3;
                         color: $clr3;
@@ -162,17 +154,6 @@
                     }
                 }
             }
-
-            .guests {}
-
-            .beds {}
-
-            .bedrooms {}
-
-            .bathrooms {}
-
-            .btn-inc {}
-
         }
 
         .address-con {
@@ -195,7 +176,6 @@
 
                     &::placeholder {
                         font-size: rem(20px);
-                        // padding-inline-start: 10px;
                     }
                 }
             }
@@ -207,10 +187,6 @@
             width: 100%;
             gap: 20px;
             overflow-y: auto;
-            // display: grid;
-            // grid-template-columns: repeat(auto-fill, minmax(200px, auto));
-            // justify-items: center;
-            // justify-content: center;
 
             >* {
                 border: 2px solid $clr6;
@@ -228,19 +204,13 @@
         }
 
         .drop-warapper {
-            // border: 2px dashed;
             width: 100%;
-            // min-height: 80vh;
-            // height: 80vh;
-            // overflow: hidden;
             margin: 5px 0px 50px 0px;
 
-            // margin: auto;
             .drop-con {
                 overflow-y: scroll;
                 border: 1px dashed $clr5;
                 width: 100%;
-                // height: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -261,36 +231,27 @@
                     height: 700px;
                     column-gap: 10px;
                     row-gap: 12px;
-                    // margin-bottom: 200px;
-                    // margin-top: 200px;
 
                     .img-con {
-                        // width: 200px;
                         position: relative;
-                        // height: 200px;
                         width: 100%;
                         height: 200px;
-                        // object-fit: cover;
                         outline: 1px dashed $clr5;
 
                         .img-menu-icon {
                             position: absolute;
                             top: 10px;
                             right: 10px;
-                            // transform: translate(-50%, -50%);
                             background-color: rgba(255, 255, 255, 0.589);
                             border-radius: 50%;
-                            // padding: 5px 10px;
                             cursor: pointer;
-                            
+
                         }
 
                         &.cover {
                             grid-column: 1/3;
-                            // grid-row: 1/2;
                             width: 100%;
                             height: 400px;
-                            // margin-top: 100px;
                         }
 
                         img {
@@ -319,7 +280,6 @@
                 font-size: rem(23px);
                 color: $clr3;
                 font-weight: 600;
-                // font-family: AirBold;
             }
 
             .listing-subtitle {
@@ -333,14 +293,12 @@
                 border-radius: 10px;
                 outline: none;
                 width: 100%;
-                // width: 500px;
                 height: 200px;
                 font-size: rem(40px);
                 padding: 15px;
                 font-family: 'AirLight';
                 font-weight: bold;
 
-                // font-family: AirBold;
                 &::placeholder {
                     font-size: rem(40px);
                 }
@@ -369,7 +327,6 @@
                 font-size: rem(20px);
                 padding: 15px;
                 font-family: 'AirLight';
-                // font-weight: 500;
             }
         }
 
@@ -407,14 +364,8 @@
                             border: 2px solid $clr3;
                         }
 
-                        // &[value]:before{
-                        //  content: '\0024';
-                        // }
                     }
 
-                    // &::before{
-                    //     content: '\0024';
-                    // }
                     input::-webkit-outer-spin-button,
                     input::-webkit-inner-spin-button {
                         -webkit-appearance: none;
@@ -434,7 +385,6 @@
                     background-color: $clr2;
                     cursor: pointer;
 
-                    //    padding: 2px 2px 2px 2px;
                     &:hover {
                         border: 1px solid $clr3;
                         color: $clr3;
@@ -497,10 +447,9 @@
             overflow: hidden;
             padding: 10px;
             margin: auto;
+
             .preview-img-con {
-                // width: 200px;
                 width: 100%;
-                // height: 200px;
                 border-radius: 10px;
 
                 img {
@@ -511,52 +460,60 @@
                     border-radius: 10px;
                 }
             }
-            .preview-header{
+
+            .preview-header {
                 padding: 10px;
                 border-bottom: 1px solid $clr6;
             }
-            .preview-property{
+
+            .preview-property {
                 display: flex;
                 justify-content: space-between;
                 padding: 10px;
                 border-bottom: 1px solid $clr6;
-                span{
+
+                span {
                     width: 70%;
                     font-weight: 600;
                     font-size: rem(18px);
                 }
-                .avatar-con{
+
+                .avatar-con {
                     width: 30px;
                     height: 30px;
                     overflow: hidden;
                     border-radius: 50%;
-                    img{
+
+                    img {
                         width: 100%;
-                       object-fit: cover; 
+                        object-fit: cover;
                     }
                 }
             }
 
-            .preview-capacity{
+            .preview-capacity {
                 display: flex;
-                .proprietary-info-con{
+
+                .proprietary-info-con {
                     width: 100%;
                     padding: 10px;
                     border-bottom: 1px solid $clr6;
                     font-weight: 600;
 
                 }
-                
+
             }
-            .preview-desc{
+
+            .preview-desc {
                 padding: 10px;
                 border-bottom: 1px solid $clr6;
             }
-            .preview-location{
+
+            .preview-location {
                 padding: 10px;
             }
 
-            .btn-save-listing{
+            .btn-save-listing {
                 background-color: $clr1;
                 color: $clr1;
                 padding: 5px;
@@ -570,10 +527,6 @@
             z-index: 2;
             width: 50%;
 
-            // display: flex;
-            // flex-direction: column;
-            // justify-content: center;
-            // align-items: center;
             progress {
                 accent-color: $clr3;
                 height: 8px;
@@ -608,7 +561,7 @@
                     cursor: pointer;
                 }
 
-                .btn-save-listing{
+                .btn-save-listing {
                     background-color: $clr1;
                     color: $clr2;
                     font-weight: 600;
@@ -624,7 +577,7 @@
     }
 
 
-    .side-con{
+    .side-con {
         flex-basis: 50%;
         background-color: black;
         display: flex;
@@ -633,18 +586,17 @@
         justify-content: center;
         padding: 40px;
         gap: 30px;
+
         >* {
             font-size: rem(60px);
             max-width: 550px;
             color: $clr2;
-        //    font-family: 'AirBold';
-            // margin-left: 40px;
             font-size: 'AirMedium';
             font-weight: bold;
         }
+
         .btn-container {
             position: relative;
-            // width: 100%;
             width: 150px;
             height: 48px;
             padding: 0 0;
@@ -653,30 +605,28 @@
             border: none;
             display: grid;
             grid-template: repeat(10, 1fr) / repeat(10, 1fr);
-          
+
             @for $i from 0 to 10 {
-              .cell:nth-child(10n + #{$i + 1}):hover ~ .content {
-                --positionX: #{$i};
-              }
-          
-              .cell:nth-child(n + #{10 * $i + 1}):nth-child(-n + #{10 * ($i + 1)}):hover
-                ~ .content {
-                --positionY: #{$i};
-              }
+                .cell:nth-child(10n + #{$i + 1}):hover~.content {
+                    --positionX: #{$i};
+                }
+
+                .cell:nth-child(n + #{10 * $i + 1}):nth-child(-n + #{10 * ($i + 1)}):hover~.content {
+                    --positionY: #{$i};
+                }
             }
-          }
-          
-          .cell {
+        }
+
+        .cell {
             width: 100%;
             height: 100%;
             z-index: 1;
-            // border: 1px solid rgba(128, 128, 128, 0.753);
-          }
-          
-          .content {
+        }
+
+        .content {
             --positionX: 0;
             --positionY: 5;
-          
+
             position: absolute;
             top: 0;
             right: 0;
@@ -687,29 +637,26 @@
             align-items: center;
             height: 100%;
             border-radius: 8px;
-          
-            background-image: radial-gradient(
-              circle at calc((0 + var(--positionX, 0)) * 10%)
-                calc((0 + var(--positionY, 0)) * 5%),
-              rgb(241, 37, 75) 0%,
-              rgb(230, 30, 77) 27.5%,
-              rgb(227, 28, 95) 40%,
-              rgb(215, 4, 102) 57.5%,
-              rgb(189, 30, 89) 75%,
-              rgb(189, 30, 89) 100%
-            );
-          }
-          
-          .action-btn {
+
+            background-image: radial-gradient(circle at calc((0 + var(--positionX, 0)) * 10%) calc((0 + var(--positionY, 0)) * 5%),
+                    rgb(241, 37, 75) 0%,
+                    rgb(230, 30, 77) 27.5%,
+                    rgb(227, 28, 95) 40%,
+                    rgb(215, 4, 102) 57.5%,
+                    rgb(189, 30, 89) 75%,
+                    rgb(189, 30, 89) 100%);
+        }
+
+        .action-btn {
             padding: 0 0;
             margin: 0 0;
             width: 100%;
             height: 100%;
             background-color: transparent;
             border: none;
-          }
-          
-          span {
+        }
+
+        span {
             padding: 0 0;
             margin: 0 0;
             color: white;
@@ -717,13 +664,14 @@
             line-height: 20px;
             font-weight: 600;
             font-family: sans-serif;
-          }
-          
+        }
+
     }
-    .video-wrapper{
+
+    .video-wrapper {
         flex-basis: 50%;
 
-        video{
+        video {
             width: 100%;
             object-fit: cover;
         }
